feat(app test 3):
- created AppTest3 and AppTest3Module together with InGameTestLoader and LobbyTestLoader support classes
- tested choosing traits in the Empire creation component
- tested starting a game and loading into the ingame successfully